force-app/main/default/objects/Evaluation__c/Evaluation__c.object-meta.xml
<CustomObject>
    <description>Captures the evaluations records associated with a Course Attendee and a Service Appointment (Course).</description>
    <label>Evaluation</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Evaluation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>