force-app/main/default/objects/Evaluation__c/fields/Able_to_calc_est_the_weight_of_the_load__c.field-meta.xml
<CustomField>
    <fullName>Able_to_calc_est_the_weight_of_the_load__c</fullName>
    <description>Able to calc/est the weight of the load</description>
    <inlineHelpText>Able to calc/est the weight of the load</inlineHelpText>
    <label>Able to calc/est the weight of the load</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>