force-app/main/default/objects/Evaluation__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Captures address from Service Appointment</description>
    <formula>Service_Appointment__r.Street + &quot; &quot; + Service_Appointment__r.City + &quot;, &quot; + Service_Appointment__r.State + &quot; &quot; + Service_Appointment__r.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Captures address from Service Appointment</inlineHelpText>
    <label>Address</label>
    <type>Text</type>
</CustomField>