force-app/main/default/objects/Evaluation__c/fields/Adj_fork_angle_prior_to_depositing_load__c.field-meta.xml
<CustomField>
    <fullName>Adj_fork_angle_prior_to_depositing_load__c</fullName>
    <description>Adjusts fork angle prior to depositing the load</description>
    <inlineHelpText>Adjusts fork angle prior to depositing the load</inlineHelpText>
    <label>Adj fork angle prior to depositing load</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>