force-app/main/default/objects/Evaluation__c/fields/Always_faces_proper_direction_of_travel__c.field-meta.xml
<CustomField>
    <fullName>Always_faces_proper_direction_of_travel__c</fullName>
    <description>Always faces proper direction of travel</description>
    <inlineHelpText>Always faces proper direction of travel</inlineHelpText>
    <label>Always faces proper direction of travel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>