force-app/main/default/objects/Evaluation__c/fields/Applies_acceptable_rigging_angle__c.field-meta.xml
<CustomField>
    <fullName>Applies_acceptable_rigging_angle__c</fullName>
    <description>Applies acceptable rigging angle</description>
    <inlineHelpText>Applies acceptable rigging angle</inlineHelpText>
    <label>Applies acceptable rigging angle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>