force-app/main/default/objects/Evaluation__c/fields/Approaches_load_squarely__c.field-meta.xml
<CustomField>
    <fullName>Approaches_load_squarely__c</fullName>
    <description>Approaches load squarely</description>
    <inlineHelpText>Approaches load squarely</inlineHelpText>
    <label>Approaches load squarely</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>