force-app/main/default/objects/Evaluation__c/fields/Attendee_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Contact__c</fullName>
    <label>Attendee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evaluations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>