force-app/main/default/objects/Evaluation__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <description>Combines Attendee Name and Evaluation Record Type Name for use with grouping Conga wallet card templates.</description>
    <formula>Attendee__r.Name + &quot; &quot; + RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee &amp; Type</label>
    <type>Text</type>
</CustomField>