force-app/main/default/objects/Evaluation__c/fields/Aware_of_over_head_obstacles_etc__c.field-meta.xml
<CustomField>
    <fullName>Aware_of_over_head_obstacles_etc__c</fullName>
    <description>Aware of over-head obstacles, etc.</description>
    <inlineHelpText>Aware of over-head obstacles, etc.</inlineHelpText>
    <label>Aware of over-head obstacles, etc.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>