force-app/main/default/objects/Evaluation__c/fields/Card_Cert_Product_Title__c.field-meta.xml
<CustomField>
    <fullName>Card_Cert_Product_Title__c</fullName>
    <description>Pulls down field from Service Appointment for use with Conga.</description>
    <formula>Service_Appointment__r.Product_Card_Cert_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card/Cert Product Title</label>
    <type>Text</type>
</CustomField>