force-app/main/default/objects/Evaluation__c/fields/Certificate_Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Card_Expiration_Date__c</fullName>
    <description>Pulls down field from Attendee for use with Conga.</description>
    <formula>Attendee__r.Certificate_Card_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate/Card Expiration Date</label>
    <type>Date</type>
</CustomField>