force-app/main/default/objects/Evaluation__c/fields/Check_complete_pendant_control_operation__c.field-meta.xml
<CustomField>
    <fullName>Check_complete_pendant_control_operation__c</fullName>
    <description>Check complete pendant control operation</description>
    <inlineHelpText>Check complete pendant control operation</inlineHelpText>
    <label>Check complete pendant control operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>