force-app/main/default/objects/Evaluation__c/fields/Check_crane_condition_look_for_damage__c.field-meta.xml
<CustomField>
    <fullName>Check_crane_condition_look_for_damage__c</fullName>
    <description>Check crane condition &amp; look for damage</description>
    <inlineHelpText>Check crane condition &amp; look for damage</inlineHelpText>
    <label>Check crane condition &amp; look for damage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>