force-app/main/default/objects/Evaluation__c/fields/Check_over_shoulders_prior_to_reversing2__c.field-meta.xml
<CustomField>
    <fullName>Check_over_shoulders_prior_to_reversing2__c</fullName>
    <description>Visual check over shoulders prior to reversing</description>
    <inlineHelpText>Visual check over shoulders prior to reversing</inlineHelpText>
    <label>Check over shoulders prior to reversing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>