force-app/main/default/objects/Evaluation__c/fields/Check_remaining_wire_rope_on_drum__c.field-meta.xml
<CustomField>
    <fullName>Check_remaining_wire_rope_on_drum__c</fullName>
    <description>Check remaining wire rope on drum</description>
    <inlineHelpText>Check remaining wire rope on drum</inlineHelpText>
    <label>Check remaining wire rope on drum</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>