force-app/main/default/objects/Evaluation__c/fields/Check_that_there_are_no_cable_overlaps__c.field-meta.xml
<CustomField>
    <fullName>Check_that_there_are_no_cable_overlaps__c</fullName>
    <description>Check that there are no cable overlaps</description>
    <inlineHelpText>Check that there are no cable overlaps</inlineHelpText>
    <label>Check that there are no cable overlaps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>