force-app/main/default/objects/Evaluation__c/fields/Check_upper_limit_switch__c.field-meta.xml
<CustomField>
    <fullName>Check_upper_limit_switch__c</fullName>
    <description>Check upper limit switch</description>
    <inlineHelpText>Check upper limit switch</inlineHelpText>
    <label>Check upper limit switch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>