force-app/main/default/objects/Evaluation__c/fields/Checks_electric_disconnect_switch_panel__c.field-meta.xml
<CustomField>
    <fullName>Checks_electric_disconnect_switch_panel__c</fullName>
    <description>Checks electric. disconnect switch/panel</description>
    <inlineHelpText>Checks electric. disconnect switch/panel</inlineHelpText>
    <label>Checks electric. disconnect switch/panel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>