force-app/main/default/objects/Evaluation__c/fields/Checks_extra_equipment_base_pads_etc__c.field-meta.xml
<CustomField>
    <fullName>Checks_extra_equipment_base_pads_etc__c</fullName>
    <description>Checks extra equipment; base pads, etc.</description>
    <inlineHelpText>Checks extra equipment; base pads, etc.</inlineHelpText>
    <label>Checks extra equipment; base pads, etc.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>