force-app/main/default/objects/Evaluation__c/fields/Checks_floor_condition_of_trailer_prior__c.field-meta.xml
<CustomField>
    <fullName>Checks_floor_condition_of_trailer_prior__c</fullName>
    <description>Checks floor condition of trailer prior to entering</description>
    <inlineHelpText>Checks floor condition of trailer prior to entering</inlineHelpText>
    <label>Checks floor condition of trailer prior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>