force-app/main/default/objects/Evaluation__c/fields/Checks_for_all_appropriate_labeling__c.field-meta.xml
<CustomField>
    <fullName>Checks_for_all_appropriate_labeling__c</fullName>
    <description>Checks for all appropriate labeling</description>
    <inlineHelpText>Checks for all appropriate labeling</inlineHelpText>
    <label>Checks for all appropriate labeling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>