force-app/main/default/objects/Evaluation__c/fields/Checks_for_clear_path_of_travel__c.field-meta.xml
<CustomField>
    <fullName>Checks_for_clear_path_of_travel__c</fullName>
    <description>Checks for clear path of travel</description>
    <inlineHelpText>Checks for clear path of travel</inlineHelpText>
    <label>Checks for clear path of travel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>