force-app/main/default/objects/Evaluation__c/fields/Checks_for_oil_hydraulic_leaks_etc__c.field-meta.xml
<CustomField>
    <fullName>Checks_for_oil_hydraulic_leaks_etc__c</fullName>
    <description>Checks for oil, hydraulic, leaks etc.</description>
    <inlineHelpText>Checks for oil, hydraulic, leaks etc.</inlineHelpText>
    <label>Checks for oil, hydraulic, leaks etc.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>