force-app/main/default/objects/Evaluation__c/fields/Checks_for_rail_end_stops__c.field-meta.xml
<CustomField>
    <fullName>Checks_for_rail_end_stops__c</fullName>
    <description>Checks for rail end stops</description>
    <inlineHelpText>Checks for rail end stops</inlineHelpText>
    <label>Checks for rail end stops</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>