force-app/main/default/objects/Evaluation__c/fields/Checks_ground_surfaces_hazards_removed__c.field-meta.xml
<CustomField>
    <fullName>Checks_ground_surfaces_hazards_removed__c</fullName>
    <description>Checks ground surfaces - hazards removed</description>
    <inlineHelpText>Checks ground surfaces - hazards removed</inlineHelpText>
    <label>Checks ground surfaces - hazards removed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>