force-app/main/default/objects/Evaluation__c/fields/Checks_ground_surfaces_ready_to_support__c.field-meta.xml
<CustomField>
    <fullName>Checks_ground_surfaces_ready_to_support__c</fullName>
    <description>Checks ground surfaces-ready to support</description>
    <inlineHelpText>Checks ground surfaces-ready to support</inlineHelpText>
    <label>Checks ground surfaces-ready to support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>