force-app/main/default/objects/Evaluation__c/fields/Checks_stabilizers_out_riggers_etc__c.field-meta.xml
<CustomField>
    <fullName>Checks_stabilizers_out_riggers_etc__c</fullName>
    <description>Checks stabilizers, out-riggers etc</description>
    <inlineHelpText>Checks stabilizers, out-riggers etc</inlineHelpText>
    <label>Checks stabilizers, out-riggers etc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>