force-app/main/default/objects/Evaluation__c/fields/Checks_wire_rope_hook_etc__c.field-meta.xml
<CustomField>
    <fullName>Checks_wire_rope_hook_etc__c</fullName>
    <description>Checks wire rope, hook etc</description>
    <inlineHelpText>Checks wire rope, hook etc</inlineHelpText>
    <label>Checks wire rope, hook etc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>