force-app/main/default/objects/Evaluation__c/fields/Checks_work_area_for_hazards__c.field-meta.xml
<CustomField>
    <fullName>Checks_work_area_for_hazards__c</fullName>
    <description>Checks work area for hazards</description>
    <inlineHelpText>Checks work area for hazards</inlineHelpText>
    <label>Checks work area for hazards</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>