force-app/main/default/objects/Evaluation__c/fields/Cleaning_and_storage_of_PPE__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_and_storage_of_PPE__c</fullName>
    <description>Cleaning and storage of PPE</description>
    <inlineHelpText>Cleaning and storage of PPE</inlineHelpText>
    <label>Cleaning and storage of PPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>