force-app/main/default/objects/Evaluation__c/fields/Clears_area_of_wrkrs_by_barricading_etc__c.field-meta.xml
<CustomField>
    <fullName>Clears_area_of_wrkrs_by_barricading_etc__c</fullName>
    <description>Clears area of wrkrs by barricading, etc</description>
    <inlineHelpText>Clears area of wrkrs by barricading, etc</inlineHelpText>
    <label>Clears area of wrkrs by barricading, etc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>