force-app/main/default/objects/Evaluation__c/fields/Clears_obstructions_raising_lowering__c.field-meta.xml
<CustomField>
    <fullName>Clears_obstructions_raising_lowering__c</fullName>
    <description>Clears obstructions raising &amp; lowering</description>
    <inlineHelpText>Clears obstructions raising &amp; lowering</inlineHelpText>
    <label>Clears obstructions raising &amp; lowering</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>