force-app/main/default/objects/Evaluation__c/fields/Climbs_using_3_point_contact__c.field-meta.xml
<CustomField>
    <fullName>Climbs_using_3_point_contact__c</fullName>
    <description>Climbs using 3 point contact</description>
    <inlineHelpText>Climbs using 3 point contact</inlineHelpText>
    <label>Climbs using 3 point contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>