force-app/main/default/objects/Evaluation__c/fields/Comfortable_with_the_controls__c.field-meta.xml
<CustomField>
    <fullName>Comfortable_with_the_controls__c</fullName>
    <description>Comfortable with the controls</description>
    <inlineHelpText>Comfortable with the controls</inlineHelpText>
    <label>Comfortable with the controls</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>